ica/topic-6/nginx-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: circuit-breaking
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-app
    version: v1
  name: nginx-app-v1
  namespace: circuit-breaking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
      version: v1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-app
        version: v1
    spec:
      volumes:
      - name: html
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx-app
        resources: {}
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-app
  name: nginx-app
  namespace: circuit-breaking
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-app
